# eval-setup-scripts

./: README.md  leonardo_env.sh  pyproject.toml  setup.sh
